# python

./: --interactive  demo.py  fibon.py  test.py  test2.py
hm_learning/: pyproject.toml
hm_learning/01_Pyhon基础/: hm_01_hello.py  hm_03_注释.py  hm_04_qq号码.py  hm_05_超市买苹果.py  hm_06_个人信息.py  hm_07_买苹果增强版.py  hm_08_买苹果改进.py  hm_09_格式化输出.py
hm_learning/02_分支/: hm_01_判断年龄.py  hm_02_判断年龄改进版.py  hm_03_逻辑运算演练.py  hm_04_判断考试成绩.py  hm_05_非公勿入.py  hm_06_女友的生日.py  hm_07_火车站安检.py  hm_08_石头剪刀布.py
hm_learning/03_循环/: hm_01_重复执行.py  hm_02_第一个while循环.py  hm_03_程序计数.py  hm_04_累加求和.py  hm_05_偶数求和.py  hm_10_嵌套打印小星星.py  hm_11_九九乘法表.py
hm_learning/04_函数/: hm_01_九九乘法表.py  hm_03_第一个函数.py  hm_04_第一个函数改造.py  hm_05_函数的参数.py  hm_06_函数的返回值.py  hm_07_函数的嵌套调用.py  hm_08_打印分割线.py  hm_09_打印多条分割线.py  hm_10_体验模块.py  hm_10_分割线模块.py
hm_learning/05_高级数据类型/: hm_01_列表基本使用.py  hm_02_del关键字.py  hm_03_列表的数据统计.py  hm_04_列表排序.py  hm_05_列表遍历.py  hm_06_元组基本使用.py  hm_07_元祖遍历.py  hm_07_元组遍历.py  hm_08_格式化字符串.py  hm_09_字典的定义.py  hm_10_字典的基本使用.py  hm_11_字典的其他操作.py  hm_12_字典的遍历.py  hm_13_字典的应用场景.py  hm_14_字符串定义和遍历.py  hm_15_字符串统计操作.py  hm_16_字符串的判断方法.py  hm_17_字符串查找和替换.py  hm_18_字符串文本对齐.py  hm_19_字符串拆分和拼接.py  hm_21_遍历字典的列表.py
hm_learning/06_名片管理系统/: cards_main.py  cards_tools.py
hm_learning/07_语法进阶/: hm_01_引用.py  hm_02_局部变量.py  hm_03_全局变量.py  hm_04_函数不能直接修改全局变量.py  hm_05_修改全局变量.py  hm_06_全局变量的位置.py  hm_07_全局变量命名.py  hm_08_多个返回值.py  hm_09_交换数字(面试题).py  hm_10_不可变和可变参数.py  hm_11_函数内部通过方法修改可变参数.py  hm_12_加等于(面试题).py  hm_13_函数的缺省参数.py  hm_14_函数的缺省参数定义.py  hm_15_缺省参数注意点.py  hm_16_多值参数.py  hm_17_多值参数求和.py  hm_20_递归求和.py  (+2 more)
(+1735 files in other folders)
