[tool.poetry]
name = "hm-learning"
version = "0.1.0"
description = ""
authors = ["Ryan_windows <Ryan_windows@test.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
